[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyrenogy"
version = "0.1.0"
description = "Python library for communicating with Renogy solar devices via Modbus RTU"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "PyRenogy Contributors"},
]
keywords = [
    "renogy",
    "solar",
    "modbus",
    "rs485",
    "charge-controller",
    "monitoring",
    "energy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Home Automation",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Hardware",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]

dependencies = [
    "pyserial>=3.5",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
renogy = "pyrenogy.cli:main"

[project.urls]
Homepage = "https://github.com/pyrenogy/pyrenogy"
Documentation = "https://github.com/pyrenogy/pyrenogy#readme"
Repository = "https://github.com/pyrenogy/pyrenogy.git"
Issues = "https://github.com/pyrenogy/pyrenogy/issues"

[tool.hatch.build.targets.wheel]
packages = ["pyrenogy"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip without explicit strict parameter
]

[tool.ruff.lint.isort]
known-first-party = ["pyrenogy"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=pyrenogy --cov-report=term-missing"
